# AgentDS

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  REVIEW_FEEDBACK.md  REVIEW_SUMMARY.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RULESET_GUIDE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
agentds/: __init__.py  cli.py  py.typed
agentds/agents/: __init__.py  api_wrapper.py  automl.py  base.py  cloud_deploy.py  data_cleaning.py  data_loader.py  devops.py  drift_monitor.py  eda_copilot.py  feature_engineer.py  optimization.py
agentds/core/: __init__.py  apo.py  artifact_store.py  cache_layer.py  config.py  exceptions.py  job_queue.py  llm_gateway.py  logger.py  validation.py
agentds/integrations/: __init__.py  n8n.py  notifications.py
agentds/web/: __init__.py  app.py
agentds/web/api/: __init__.py  middleware.py  webhooks.py
agentds/workflows/: __init__.py  pipeline.py
config/: feature_flags.yaml  llm_config.yaml  pipeline_config.yaml
docker/: Dockerfile  docker-compose.yml
docker/k8s/: deployment.yaml  service.yaml
docs/: API_REFERENCE.md  APO_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  LLM_PROVIDERS.md  N8N_GUIDE.md  SECRETS.md  TROUBLESHOOTING.md  USER_MANUAL.md
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_apo.py  test_core.py  test_exceptions.py  test_validation.py
